[package]
name = "PROJECT3"
version = "0.1.0"
authors = ["Nelson Chan <chakflying@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.3"
clap = "2.33.0"
rand = "0.7"
chrono = "0.4"
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_with = "1.3"
bitflags = "1.2.1"
bitflags_serde_shim = "0.2"
integer-encoding = "1.0"
cute = "0.3"
